SpringBootTest for AuthController